Bug 144846 - Opening File menu a second time in Impress doesn't work
Summary: Opening File menu a second time in Impress doesn't work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2021-09-30 22:23 UTC by Aron Budea
Modified: 2022-03-30 10:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-09-30 22:23:47 UTC
- In Impress, switch to Properties sidebar deck,
- Press Alt+F to open File menu,
- Press Esc to close the menu,
- Press Alt+F to open File menu again.

-> Menu doesn't open, the sidebar's Slide Format dropdown is selected instead.
Menu opens every second time this key combination is used.

Observed in LO Version: 7.3.0.0.alpha0+ (55adeb1c3fbcf32c7c44a3f0c310b56298f551f9) / Ubuntu. Fine with gen VCL plugin, probably GTK3-specific.

This is a regression from the following commit, bibisected using repo bibisect-linux-64-7.0. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bc0e0f633b05c4f91b6695488fc9e5c127507ba5
author		Caolán McNamara <caolanm@redhat.com>	2020-04-09 11:41:00 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-16 20:28:24 +0200

tdf#131120 use a replacement for GtkComboBox
Comment 1 Michael Meeks 2021-10-01 07:18:13 UTC
Really bites when trying to get to recent-files with muscle memory: Alt-f <down-arrow a lot> - changes my slide size to an unusual format and re-lays out all the slides very unexpectedly ;-)
Comment 2 Caolán McNamara 2021-10-01 08:05:41 UTC
On the face of things it seems to be toggling between the two things that have "alt+f" mnemonics, the menu and the "Format" label, likewise alt+i has two targets
Comment 3 Caolán McNamara 2021-10-01 13:43:01 UTC
I don't really see an alternative except to take over the task of launching the menus from alt+foo in libreoffice rather than leaving it to gtk
Comment 4 Michael Meeks 2021-10-01 15:08:09 UTC
Hmm, that would suck. I wonder why the first Alt-F opens the menu, and why the escape to switch focus back ends up not in the document, but in the sidebar is that the root cause ?
Comment 5 Caolán McNamara 2021-10-01 16:14:09 UTC
The "File" menu in the menubar and the "Format" label in the Slide pane of the sidebar both have mnemonics of "F" and are both gtk widgets. When there are multiple target widgets for a mnemonic gtk pops the first widget off the list for that mnemonic, when its triggered, and pushes to the end so they get cycled through. First Alt+f gets the menubar "_File" menu (maybe just because it was created first) and 2nd gets that "_Format" in the sidebar.

If the the "Slide" pane with the expander is closed it'll be the File menu each time. Alt+I and Alt+O have the same problem, whle Alt+M is available for the sidebar alone and Alt+W is menubar alone for comparison. Anyhow, https://gerrit.libreoffice.org/c/core/+/122928 will be sufficient I think.
Comment 6 Commit Notification 2021-10-01 20:51:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7abf811bcbb92562a8da965d2ff03b9d53853e09

tdf#144846 launch gtk3 menubar menus from LibreOffice code

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2021-10-01 20:52:42 UTC
done in trunk, backport to 7-2 in gerrit
Comment 8 Commit Notification 2021-10-05 08:51:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/03ea50373b37f2a0e5d44649a6ccc9c89d1e3244

tdf#144846 launch gtk3 menubar menus from LibreOffice code

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Aron Budea 2021-11-15 15:44:02 UTC
Verified in LO Version: 7.3.0.0.alpha1+ (e6968f0485cfb2f6c941d11c438386e14a47095d) / Ubuntu.
Thanks for fixing, Caolán!