tdf#144846 launch gtk3 menubar menus from LibreOffice code

rather than using the builtin gtk mechanism so we can avoid
duplicate mnemonics in the sidebar getting used instead.

Change-Id: I6c761ae63ae25d835de9444b0e298c63996a83a7